--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dice",
-  "version": "0.0.1",
+  "name": "dice-typescript",
+  "version": "0.1.0",
   "description": "A TypeScript library for parsing dice rolling expressions, most commonly used in tabletop RPGs.",
   "main": "./dist/index.js",
   "scripts": {
@@ -20,6 +20,10 @@
   },
   "keywords": [
     "dice",
+    "dice-roller",
+    "dice-notation",
+    "rpg",
+    "rpg-dice-roller",
     "parser",
     "generator",
     "random",
