--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "codacy-coverage": "^2.0.2",
     "istanbul": "^0.4.5",
-    "jasmine-core": "^2.6.4",
+    "jasmine-core": "2.5.2",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
