--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dice-typescript",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A TypeScript library for parsing dice rolling expressions, most commonly used in tabletop RPGs.",
   "main": "./dist/index.js",
   "scripts": {
@@ -8,8 +8,7 @@
     "clean": "rimraf ./dist && rimraf ./coverage",
     "coverage": "istanbul coverage",
     "codacy": "cat ./coverage/lcov/lcov.info | codacy-coverage --verbose",
-    "lint": "tslint --type-check -p ./tsconfig.json",
-    "postinstall": "./node_modules/.bin/typings install",
+    "lint": "tslint -p ./tsconfig.json",
     "tsc": "tsc --project ./tsconfig.build.json",
     "test": "npm run lint && karma start --single-run",
     "test_watch": "karma start"
@@ -36,6 +35,7 @@
   },
   "homepage": "https://github.com/trwolfe13/dice#readme",
   "devDependencies": {
+    "@types/jasmine": "^2.8.6",
     "codacy-coverage": "^2.0.2",
     "istanbul": "^0.4.5",
     "jasmine-core": "2.5.2",
@@ -45,10 +45,6 @@
     "karma-typescript": "^3.0.4",
     "rimraf": "^2.6.1",
     "tslint": "^5.4.3",
-    "typescript": "^2.4.1",
-    "typings": "^2.1.1"
-  },
-  "dependencies": {
-    
+    "typescript": "^2.4.1"
   }
 }
