--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dice-typescript",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A TypeScript library for parsing dice rolling expressions, most commonly used in tabletop RPGs.",
   "main": "./dist/index.js",
   "scripts": {
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/trwolfe13/dice#readme",
   "devDependencies": {
     "@types/jasmine": "^2.8.6",
+    "@types/random-js": "^1.0.30",
     "codacy-coverage": "^2.0.2",
     "istanbul": "^0.4.5",
     "jasmine-core": "2.5.2",
@@ -46,5 +47,8 @@
     "rimraf": "^2.6.1",
     "tslint": "^5.4.3",
     "typescript": "^2.4.1"
+  },
+  "dependencies": {
+    "random-js": "^1.0.8"
   }
 }
